native/core/include/photo_core.h

/* ------------------------------------------------------------------------- */
/* Forward declarations                                                      */
/* ------------------------------------------------------------------------- */

typedef struct photo_engine photo_engine_t;
/* ------------------------------------------------------------------------- */
/* Configuration                                                             */
/* ------------------------------------------------------------------------- */

/*
 * Engine configuration. Caller fills this and passes to photo_engine_create.
 * The engine copies what it needs; pointers do not need to outlive the call.
 *
 * Zero/NULL fields request engine defaults:
 *   memory_budget_bytes = 256 MiB
 *   disk_budget_bytes   = 16 GiB
 *   decode_threads      = max(2, physical_cores - 1)
 *   io_threads          = 4
 *   ml_threads          = max(1, physical_cores / 2)
 */
typedef struct {
    const char* catalog_path_utf8;   /* SQLite DB path; must be on local FS  */
    const char* cache_path_utf8;     /* LMDB env directory; will be created  */
    const char* models_path_utf8;    /* dir for ML models (M6+); may be NULL */
    uint64_t    memory_budget_bytes; /* memory LRU cap                       */
    uint64_t    disk_budget_bytes;   /* LMDB high-water mark for eviction    */
    uint32_t    decode_threads;
    uint32_t    io_threads;
    uint32_t    ml_threads;
    uint32_t    log_level;           /* photo_log_level_t                    */
    uint32_t    flags;               /* reserved; pass 0                     */
} photo_config_t;
/* ------------------------------------------------------------------------- */
/* Engine lifecycle                                                          */
/* ------------------------------------------------------------------------- */

/*
 * Create an engine. Returns NULL on failure (config invalid, cache path not
 * writable, catalog on a network FS, etc.). Each engine owns its own threads,
 * cache, and catalog; multiple engines may coexist in one process but is not
 * an expected use case.
 *
 * Thread-safety: not safe to call concurrently with itself for the same
 * paths; safe across distinct paths.
 */
PHOTO_API photo_engine_t* photo_engine_create(const photo_config_t* cfg);
/*
 * Destroy an engine. Cancels in-flight work, flushes pending catalog writes,
 * and closes the cache. Blocks until all workers exit. Safe to pass NULL.
 *
 * Thread-safety: must not be called while any other engine call is in flight.
 */
PHOTO_API void photo_engine_destroy(photo_engine_t* engine);
/* Returns a static string. Format: "MAJOR.MINOR.PATCH+gitsha". */
PHOTO_API const char* photo_engine_version(void);
/* ABI version constant for runtime compatibility checks from Dart. */
PHOTO_API uint32_t photo_abi_version(void);
/* ------------------------------------------------------------------------- */
/* Slot lifecycle (called by the photo_native plugin, NOT by Dart)           */
/*                                                                           */
/* A slot is a logical render target. Each visible gallery tile has one      */
/* slot for its lifetime. The plugin pairs each slot with a Flutter texture  */
/* registration of equal lifetime. Stage upgrades swap frames within the     */
/* slot; the Flutter texture ID never changes for the slot's life.           */
/* ------------------------------------------------------------------------- */

PHOTO_API uint64_t photo_slot_create(photo_engine_t* engine,
                                     int32_t initial_w, int32_t initial_h);
PHOTO_API void photo_slot_destroy(photo_engine_t* engine, uint64_t slot_id);
/*
 * Bind a generation token to a slot. Any in-flight request whose generation
 * does not equal the slot's current generation will not produce a visible
 * frame and will not emit STAGE_READY events. Used by the UI when a virtualized
 * cell rebinds to a different asset.
 *
 * Thread-safety: callable from any thread. Returns previous generation.
 */
PHOTO_API uint64_t photo_slot_bind_generation(photo_engine_t* engine,
                                              uint64_t slot_id,
                                              uint64_t generation);
/* ------------------------------------------------------------------------- */
/* Thumbnail requests                                                        */
/*                                                                           */
/* The hot path (photo_thumb_request_fast) takes scalars to avoid per-request */
/* heap allocation on the Dart side. The struct variant (photo_thumb_request) */
/* is retained for cold-path callers and future-field additions.              */
/* ------------------------------------------------------------------------- */

/*
 * Hot path: submit a thumbnail request from Dart with zero heap allocation.
 * The path_utf8 buffer must remain valid only for the duration of this call.
 *
 * Returns a non-zero request ID on success, 0 on rejection (invalid slot,
 * empty path, etc.).
 *
 * Thread-safety: callable from any thread. Designed for p99 < 50 us on the
 * Dart caller side.
 */
PHOTO_API uint64_t photo_thumb_request_fast(
    photo_engine_t* engine,
    uint64_t asset_id,
    uint64_t slot_id,
    uint64_t generation,
    const char* path_utf8,
    uint32_t target_w,
    uint32_t target_h,
    uint32_t wanted_stages_mask,
    uint32_t priority,                  /* photo_priority_t */
    uint32_t flags);
/*
 * Cancel a previously submitted thumbnail request. Cancellation is O(1) and
 * advisory: in-flight work that has already produced a frame may still
 * complete; the result will not be presented if the request's generation
 * no longer matches the slot's current generation. Safe to call with an
 * unknown ID.
 */
PHOTO_API void photo_thumb_cancel(photo_engine_t* engine, uint64_t request_id);
/* ------------------------------------------------------------------------- */
/* Frame acquisition (called by the plugin's texture callback)               */
/* ------------------------------------------------------------------------- */

typedef struct {
    const uint8_t* bgra;       /* device-byte-order BGRA, premultiplied alpha */
    uint32_t       width;
    uint32_t       height;
    uint32_t       stride;     /* bytes per row, >= width * 4                 */
    void*          release_ctx; /* opaque; pass to photo_slot_release         */
} photo_frame_view_t;
/*
 * Acquire the latest presentable frame for a slot. The returned view borrows
 * memory owned by the engine. The caller must call photo_slot_release exactly
 * once with the returned release_ctx. Returns false if no frame is yet
 * available; in that case *out is zeroed and release is not required.
 *
 * Thread-safety: callable from any thread. Typically called from the platform
 * texture callback (macOS raster thread / Windows render thread).
 */
PHOTO_API bool photo_slot_acquire_latest(photo_engine_t* engine,
                                         uint64_t slot_id,
                                         photo_frame_view_t* out);
PHOTO_API void photo_slot_release(photo_engine_t* engine, void* release_ctx);
/* ------------------------------------------------------------------------- */
/* Events (pull-based, Dart drains)                                          */
/* ------------------------------------------------------------------------- */

typedef struct {
    uint32_t kind;            /* photo_event_kind_t                       */
    uint32_t stage;           /* photo_stage_t (where applicable)         */
    int32_t  status;          /* photo_status_t (where applicable)        */
    uint32_t width;
    uint32_t height;
    uint64_t request_id;
    uint64_t asset_id;
    uint64_t slot_id;
    uint64_t generation;
    uint64_t aux64;           /* event-kind dependent payload             */
    uint64_t aux64_b;
    uint32_t _reserved[2];
} photo_event_t;
/*
 * Drain up to `cap` events into `out`. Returns the number written. Drains in
 * FIFO order. Safe to call from one thread only (designed as SPSC: Dart pump
 * is the single consumer).
 */
PHOTO_API size_t photo_poll_events(photo_engine_t* engine,
                                   photo_event_t* out,
                                   size_t cap);
/* ------------------------------------------------------------------------- */
/* Import and catalog                                                        */
/* ------------------------------------------------------------------------- */

/*
 * Begin importing photos from a path. If the path is a file, imports that
 * one asset; if a directory, recurses. Returns a non-zero job ID; progress
 * is reported via PHOTO_EVT_IMPORT_PROGRESS and PHOTO_EVT_IMPORT_COMPLETE
 * events whose request_id matches the returned job ID.
 *
 * flags: reserved; pass 0.
 */
PHOTO_API uint64_t photo_import_path(photo_engine_t* engine,
                                     const char* path_utf8,
                                     uint32_t flags);
/*
 * Re-scan all previously imported locations for changes (added/removed/modified
 * files). Returns a job ID. Progress events as above.
 */
PHOTO_API uint64_t photo_rescan(photo_engine_t* engine, uint32_t flags);
/*
 * One catalog asset row, for hydrating the Dart library after import. The
 * engine-assigned asset_id is stable across runs (unlike a path hash), so face
 * data and the thumbnail cache stay valid across restarts. `path` is a
 * NUL-terminated absolute path; the buffer holds a full Linux PATH_MAX (4096).
 */
typedef struct {
    uint64_t asset_id;
    uint64_t size;          /* bytes                                          */
    uint64_t mtime_ns;      /* last-modified, ns since epoch                  */
    uint32_t width;         /* 0 until a metadata/codec pass fills it         */
    uint32_t height;
    uint32_t orientation;   /* EXIF orientation 1..8                          */
    int32_t  starred;       /* 0/1                                            */
    int32_t  rating;        /* 0..5                                           */
    uint32_t flags;         /* bit0: hidden                                   */
    uint32_t _reserved[3];
    char     path[4096];
} photo_asset_t;
/*
 * List catalog assets (hidden excluded), ordered by path. Fills up to `cap`
 * rows into `out` and returns the TOTAL count available — grow and re-call if
 * it exceeds `cap`, mirroring the photo_face_list_* calls. Synchronous.
 */
PHOTO_API size_t photo_list_assets(photo_engine_t* engine,
                                   photo_asset_t* out, size_t cap);
/* A geotagged asset: its id and decimal-degree coordinates. */
typedef struct {
    uint64_t asset_id;
    double   lat;
    double   lon;
} photo_geopoint_t;
/*
 * List every geotagged asset (those with GPS EXIF). Fills up to `cap` rows and
 * returns the TOTAL count available — grow and re-call if it exceeds `cap`.
 * Synchronous. Drives the map.
 */
PHOTO_API size_t photo_list_geotagged(photo_engine_t* engine,
                                      photo_geopoint_t* out, size_t cap);
/* ------------------------------------------------------------------------- */
/* ML (added in M6)                                                          */
/* ------------------------------------------------------------------------- */

/*
 * Probe whether a provider is usable on this machine. Results are cached
 * per (provider, driver_version, gpu_uuid, ort_version). Synchronous; bounded
 * to ~2s per probe. Returns photo_status_t.
 */
PHOTO_API int32_t photo_provider_probe(photo_engine_t* engine,
                                       int32_t provider);
/*
 * Schedule a face scan for an asset. Detection -> alignment -> embedding,
 * with results stored in the catalog. Emits PHOTO_EVT_SCAN_PROGRESS while
 * running. Returns a job ID.
 */
PHOTO_API uint64_t photo_face_scan(photo_engine_t* engine,
                                   uint64_t asset_id,
                                   uint32_t flags);
/* ------------------------------------------------------------------------- */
/* Clustering (added in M7)                                                  */
/* ------------------------------------------------------------------------- */

PHOTO_API uint64_t photo_face_approve(photo_engine_t* engine,
                                      uint64_t cluster_id,
                                      uint64_t embedding_id);
PHOTO_API uint64_t photo_face_reject(photo_engine_t* engine,
                                     uint64_t cluster_id,
                                     uint64_t embedding_id);
/*
 * Trigger a full HDBSCAN rebuild. Expensive (minutes on a large library).
 * Runs in the idle lane. Emits PHOTO_EVT_CLUSTER_UPDATED on completion.
 */
PHOTO_API uint64_t photo_cluster_rebuild(photo_engine_t* engine, uint32_t flags);
/*
 * Promote an unconfirmed cluster into a named person: confirms every face in
 * `cluster_id` into a person named `name_utf8`, merging into an existing person
 * of the same name or creating a new one. Runs in the idle lane; emits
 * PHOTO_EVT_CLUSTER_UPDATED on completion. Returns a request id.
 */
PHOTO_API uint64_t photo_face_name_cluster(photo_engine_t* engine,
                                           int64_t cluster_id,
                                           const char* name_utf8);
/* ------------------------------------------------------------------------- */
/* Face read-back (UI queries) — synchronous, metadata only.                 */
/*                                                                           */
/* No image bytes cross the boundary (the app invariant): a face carries its */
/* asset_id + source-pixel box, and the UI renders it by clipping the asset  */
/* thumbnail to that box via the existing texture pipeline. All list_* calls */
/* fill up to `cap` rows into the caller's buffer and return the TOTAL count */
/* available (which may exceed `cap` — grow and re-call), mirroring          */
/* photo_poll_events.                                                        */
/* ------------------------------------------------------------------------- */

/* A person = a confirmed/named cluster. `name` is NUL-terminated UTF-8. */
typedef struct {
    uint64_t person_id;
    int64_t  cluster_id;        /* representative cluster, -1 if none        */
    uint64_t cover_face_id;     /* best face for the avatar (highest quality)*/
    int32_t  face_count;
    int32_t  confirmed_count;
    int32_t  confirmed;         /* 0/1                                       */
    int32_t  _pad;
    char     name[128];
} photo_person_t;
/* One face row: detection metadata + cluster/person links. */
typedef struct {
    uint64_t face_id;
    uint64_t asset_id;
    int64_t  cluster_id;        /* -1 = unassigned                           */
    int64_t  person_id;         /* -1 = unconfirmed                          */
    float    box_x, box_y, box_w, box_h;   /* source-image pixels            */
    float    det_score;
    float    quality;
    int32_t  confirmed;         /* 0 = suggestion, 1 = user-confirmed        */
    int32_t  _pad;
} photo_face_t;
/* Confirmed/named people. */
PHOTO_API size_t photo_face_list_people(photo_engine_t* engine,
                                        photo_person_t* out, size_t cap);
/* Unconfirmed cluster buckets (the "unnamed faces" groups), as person rows
 * (person_id == 0, cluster_id set, name empty). */
PHOTO_API size_t photo_face_list_clusters(photo_engine_t* engine,
                                          photo_person_t* out, size_t cap);
/* Members of one cluster (confirmed + suggested), highest quality first. */
PHOTO_API size_t photo_face_list_cluster_faces(photo_engine_t* engine,
                                               int64_t cluster_id,
                                               photo_face_t* out, size_t cap);
/* Unconfirmed (suggested) faces for a person — the suggest-and-confirm queue. */
PHOTO_API size_t photo_face_list_suggestions(photo_engine_t* engine,
                                             uint64_t person_id,
                                             photo_face_t* out, size_t cap);
/* Faces detected in one asset (drives the info-panel People tab). */
PHOTO_API size_t photo_face_list_for_asset(photo_engine_t* engine,
                                           uint64_t asset_id,
                                           photo_face_t* out, size_t cap);
/* Name (or rename) a person. Returns photo_status_t. */
PHOTO_API int32_t photo_face_name_person(photo_engine_t* engine,
                                         uint64_t person_id,
                                         const char* name_utf8);