packages/photo_native/lib/src/ffi/core_api.dart


  final int faceId;
  final int assetId;
  final int clusterId;
  final int personId;
  final double boxX;
  final double boxY;
  final double boxW;
  final double boxH;
  final double score;
  final double quality;
  final bool confirmed;
}

/// One catalog asset, for library hydration. Immutable projection of
/// photo_asset_t. The [assetId] is engine-assigned and stable across runs.
final class AssetRow {
  AssetRow._(_NativeAsset a)
    : assetId = a.asset_id,
      size = a.size,
      mtimeNs = a.mtime_ns,
      width = a.width,
      height = a.height,
      orientation = a.orientation,
      starred = a.starred != 0,
      rating = a.rating,
      hidden = (a.flags & _kAssetFlagHidden) != 0,
      path = _readCName(a.path, 4096);

  final int assetId;
  final String path;
  final int size;
  final int mtimeNs;
  final int width;
  final int height;
  final int orientation;
  final bool starred;
  final int rating;
  final bool hidden;
}

/// A geotagged asset: id + decimal-degree coordinates. Immutable projection of
/// photo_geopoint_t.
final class GeoPoint {
  const GeoPoint(this.assetId, this.lat, this.lon);
  final int assetId;
  final double lat;
  final double lon;
}

/// Decode a NUL-terminated UTF-8 name out of a fixed-size native char array.
String _readCName(Array<Uint8> arr, int maxLen) {
  final bytes = <int>[];
  for (var i = 0; i < maxLen; i++) {
    final c = arr[i];
    if (c == 0) break;
    bytes.add(c);
  }
  return utf8.decode(bytes, allowMalformed: true);
}

// ---------------------------------------------------------------------------
// Bindings table — late-initialized on first use
// ---------------------------------------------------------------------------

final class _Bindings {
  static final DynamicLibrary _dylib = openPhotoCore();

  static final _AbiVersionDart abiVersion = _dylib
      .lookupFunction<_AbiVersionC, _AbiVersionDart>('photo_abi_version');

  static final _EngineVersionDart engineVersion = _dylib
      .lookupFunction<_EngineVersionC, _EngineVersionDart>(
        'photo_engine_version',
      );

  static final _EngineCreateDart engineCreate = _dylib
      .lookupFunction<_EngineCreateC, _EngineCreateDart>(
        'photo_engine_create',
      );

  static final _EngineDestroyDart engineDestroy = _dylib
      .lookupFunction<_EngineDestroyC, _EngineDestroyDart>(
        'photo_engine_destroy',
      );

  static final _SlotCreateDart slotCreate = _dylib
      .lookupFunction<_SlotCreateC, _SlotCreateDart>('photo_slot_create');

  static final _SlotDestroyDart slotDestroy = _dylib
      .lookupFunction<_SlotDestroyC, _SlotDestroyDart>('photo_slot_destroy');

  static final _SlotBindGenDart slotBindGen = _dylib
      .lookupFunction<_SlotBindGenC, _SlotBindGenDart>(
        'photo_slot_bind_generation',
      );

  static final _SlotAcquireDart slotAcquire = _dylib
      .lookupFunction<_SlotAcquireC, _SlotAcquireDart>(
        'photo_slot_acquire_latest',
      );

  static final _SlotReleaseDart slotRelease = _dylib
      .lookupFunction<_SlotReleaseC, _SlotReleaseDart>('photo_slot_release');

  static final _PollEventsDart pollEvents = _dylib
      .lookupFunction<_PollEventsC, _PollEventsDart>('photo_poll_events');

  static final _TestPublishSolidDart testPublishSolid = _dylib
      .lookupFunction<_TestPublishSolidC, _TestPublishSolidDart>(
        'photo_test_publish_solid',
      );

  static final _ThumbRequestFastDart thumbRequestFast = _dylib
      .lookupFunction<_ThumbRequestFastC, _ThumbRequestFastDart>(
        'photo_thumb_request_fast',
      );

  static final _ThumbCancelDart thumbCancel = _dylib
      .lookupFunction<_ThumbCancelC, _ThumbCancelDart>('photo_thumb_cancel');

  static final _FaceScanDart faceScan = _dylib
      .lookupFunction<_FaceScanC, _FaceScanDart>('photo_face_scan');

  static final _ImportPathDart importPath = _dylib
      .lookupFunction<_ImportPathC, _ImportPathDart>('photo_import_path');

  static final _RescanDart rescan =
      _dylib.lookupFunction<_RescanC, _RescanDart>('photo_rescan');

  static final _ListAssetsDart listAssets = _dylib
      .lookupFunction<_ListAssetsC, _ListAssetsDart>('photo_list_assets');

  static final _ListGeotaggedDart listGeotagged = _dylib
      .lookupFunction<_ListGeotaggedC, _ListGeotaggedDart>(
        'photo_list_geotagged',
      );

  static final _FaceApproveDart faceApprove = _dylib
      .lookupFunction<_FaceApproveC, _FaceApproveDart>('photo_face_approve');

  static final _FaceApproveDart faceReject = _dylib
      .lookupFunction<_FaceApproveC, _FaceApproveDart>('photo_face_reject');

  static final _ClusterRebuildDart clusterRebuild = _dylib
      .lookupFunction<_ClusterRebuildC, _ClusterRebuildDart>(
        'photo_cluster_rebuild',
      );

  static final _ProviderProbeDart providerProbe = _dylib
      .lookupFunction<_ProviderProbeC, _ProviderProbeDart>(
        'photo_provider_probe',
      );

  static final _ListPeopleDart listPeople = _dylib
      .lookupFunction<_ListPeopleC, _ListPeopleDart>('photo_face_list_people');

  static final _ListPeopleDart listClusters = _dylib
      .lookupFunction<_ListPeopleC, _ListPeopleDart>('photo_face_list_clusters');

  static final _ListClusterFacesDart listClusterFaces = _dylib
      .lookupFunction<_ListClusterFacesC, _ListClusterFacesDart>(
        'photo_face_list_cluster_faces',
      );

  static final _ListFacesByIdDart listSuggestions = _dylib
      .lookupFunction<_ListFacesByIdC, _ListFacesByIdDart>(
        'photo_face_list_suggestions',
      );

  static final _ListFacesByIdDart listForAsset = _dylib
      .lookupFunction<_ListFacesByIdC, _ListFacesByIdDart>(
        'photo_face_list_for_asset',
      );

  static final _NamePersonDart namePerson = _dylib
      .lookupFunction<_NamePersonC, _NamePersonDart>('photo_face_name_person');

  static final _NameClusterDart nameCluster = _dylib
      .lookupFunction<_NameClusterC, _NameClusterDart>('photo_face_name_cluster');
}
